@@ -1,3 +1,10 @@
+bubba-frontend (1.2.4.79) claire estelle; urgency=low
+
+  * Set/remove promisc mode on eth1 when enable disable wlan. (Tempfix)
+  * Extend timeout on bubba_socket_helper.php to not fail on long executions
+
+ -- Tor Krill <tor@excito.com>  Mon, 08 Feb 2010 21:38:54 +0100
+
 bubba-frontend (1.2.4.78) claire estelle; urgency=low
 
   * remove one shutdown of dnsmasq 
